--- a/styles/Common.module.css
+++ b/styles/Common.module.css
@@ -6,7 +6,6 @@
 .textBody p {
     line-height: 1.5;
     text-align: justify;
-    padding: 0 1rem;
 }
 
 .imageContainer {
